<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_main_default"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_photograph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:padding="16sp"
        android:text="@string/take_photo"
        android:textColor="@color/text_color_main"
        android:textSize="@dimen/default_text_size" />

    <include layout="@layout/v_horizontal_line" />


    <TextView
        android:id="@+id/tv_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:padding="16sp"
        android:text="@string/local_album"
        android:textColor="@color/text_color_main"
        android:textSize="@dimen/default_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/make_cancel"
        android:textColor="@color/text_color_main"
        android:textSize="@dimen/default_text_size" />

</LinearLayout>