<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_background">
    <LinearLayout
        android:id="@+id/a_about_lay_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <include layout="@layout/activity_base"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="24dp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/a_about_tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/default_text_size" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/a_about_lay_logo"
        android:background="@color/app_main_default"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/a_about_lay_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:text="@string/want_good_praise"
            android:textColor="@color/text_color_main" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/divider_color" />
        <LinearLayout
            android:id="@+id/a_about_check_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:text="@string/version_update"
                android:layout_weight="1"
                android:textColor="@color/text_color_main" />
            <TextView
                android:id="@+id/a_about_version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:padding="10dp"
                android:layout_weight="1"
                android:textColor="@color/red1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/a_about_lay_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:text="@string/version_introduction"
            android:textColor="@color/text_color_main" />

            <TextView
                android:id="@+id/text_lay_introduce_dec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:textSize="12sp"
                android:background="@color/app_main_background"
                android:textColor="@color/text_color_main" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/a_about_lay_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/a_about_tv_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="8dp"
            android:text="@string/company_copyright"
            android:textSize="10sp" />

    </LinearLayout>

</RelativeLayout>